k8s.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: container1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: container1
  template:
    metadata:
      labels:
        app: my-app
        component: container1
    spec:
      containers:
        - name: container1
          image: kasunn7/inspireai-userprofiling-service-image:v3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: container1-service
spec:
  selector:
    app: my-app
    component: container1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: container2
  template:
    metadata:
      labels:
        app: my-app
        component: container2
    spec:
      containers:
        - name: container2
          image: kasunn7/inspireai-quoting-service-image:v3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: container2-service
spec:
  selector:
    app: my-app
    component: container2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: container1-service
                port:
                  number: 8080
    - host: app2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: container2-service
                port:
                  number: 8080
